FIX: in page Explore -> Top Models on mobile added background in wrapper of units

--- a/src/styles/_users.scss
+++ b/src/styles/_users.scss
@@ -52,6 +52,13 @@
       margin-top: 0;
     }
   }
+
+  .explore & {
+
+    @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+      background-color: $white;
+    }
+  }
 }
 
 .user-actions {
